--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,13 @@ jwt.secret=${JWT_SECRET}
 
 # CORS
 cors.allowed-origins=${CORS_ALLOWED_ORIGINS:*}
+
+# ? SERVERLESS DB OPTIMIZATION
+# Allow the pool to shrink to 0 connections when idle
+spring.datasource.hikari.minimum-idle=0
+
+# Close idle connections quickly (e.g., after 2 minutes)
+spring.datasource.hikari.idle-timeout=120000
+
+# Limit max connections to avoid exhausting Neon's free tier
+spring.datasource.hikari.maximum-pool-size=5
