Admin Role added + Google Oauth2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,17 @@ spring.datasource.hikari.idle-timeout=120000
 
 # Limit max connections to avoid exhausting Neon's free tier
 spring.datasource.hikari.maximum-pool-size=5
+
+# Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# ? Google OAuth2 Configuration
+spring.security.oauth2.client.registration.google.client-id=855218619612-jmpp61ujuv8ma1kp9enc38fb9dqtnksl.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:6767/login/oauth2/code/google
