--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # ? Google OAuth2 Configuration
-spring.security.oauth2.client.registration.google.client-id=855218619612-jmpp61ujuv8ma1kp9enc38fb9dqtnksl.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=email,profile
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:6767/login/oauth2/code/google
