Notification Service & Files Uploading for Notices and Assignment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,11 @@ spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=email,profile
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:6767/login/oauth2/code/google
+
+cloudinary.cloud-name=${CLOUDINARY_CLOUDNAME}
+cloudinary.api-key=${CLOUDINARY_APIKEY}
+cloudinary.api-secret=${CLOUDINARY_APISECRET}
+
+# Increase File Upload Limits on Cloudinary
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
